# coinbase-rs

./: .gitignore  Cargo.toml  README.md
examples/: current_time.rs  get_currencies.rs  list_transactions.rs  transactions.rs
src/: adapters.rs  error.rs  lib.rs  private.rs  public.rs  request.rs
