[package]
name = "coinbase-rs"
version = "0.3.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2018"
description = "Coinbase client for Rust"
repository = "https://github.com/j16r/coinbase-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
async-stream = "0.3"
base64 = "0.10"
bigdecimal = { version = "0.2", features = [ "serde" ] }
chrono = { version = "0.4", features = [ "serde" ] }
failure = "0.1"
futures = "0.3"
hmac = "0.11"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
hyper-tls = "0.5"
serde = "1.0"
serde_derive = "1"
serde_json = "1"
sha2 = "0.9"
thiserror = "1.0"
tokio = { version = "1.5", features = [ "full" ] }
tokio-stream = "0.1"
uritemplate = "0.1.2"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
