[package]
name = "coinbase-rs"
version = "0.3.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2021"
description = "Coinbase client for Rust"
repository = "https://github.com/j16r/coinbase-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
async-stream = "*"
base64 = "*"
bigdecimal = { version = "*", features = [ "serde" ] }
chrono = { version = "*", features = [ "serde" ] }
futures = "*"
hmac = "*"
http = "*"
hyper = { version = "*", features = [ "full" ] }
hyper-tls = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
thiserror = "*"
tokio = { version = "*", features = [ "full" ] }
tokio-stream = "*"
uritemplate-next = "*"
uuid = { version = "*", features = [ "serde", "v4" ] }
