[package]
name = "coinbase-rs"
version = "0.3.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2021"
description = "Coinbase client for Rust"
repository = "https://github.com/j16r/coinbase-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
async-stream = "0.3"
base64 = "0.10"
bigdecimal = { version = "0.2", features = [ "serde" ] }
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
hmac = "0.7"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
hyper-tls = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.8"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
uritemplate-next = "0.2"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
